--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,11 +4,21 @@
 * {
   scroll-behavior: smooth;
   box-sizing: border-box;
-  scrollbar-width: none; /* Firefox */
-  -webkit-overflow-scrolling: touch; /* Safari */ 
-  -ms-overflow-style: none; /* IE and Edge */
-  outline: none;
-}
+    /* Hide scrollbar for Firefox */
+    scrollbar-width: none;
+    /* Hide scrollbar for IE and Edge */
+    -ms-overflow-style: none;
+    /* Hide scrollbar for Chrome, Safari, and Opera */
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    outline: none;
+  }
+  
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  *::-webkit-scrollbar {
+    display: none;
+  }
 
 *::-webkit-scrollbar {
   display: none;
